axion-manifests/ui/axion-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: axion-svc
  labels:
    app: axion

spec:
  type: ClusterIP
  selector:
    app: axion
    
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
